--- a/.cdmrc
+++ b/.cdmrc
@@ -1,3 +1,3 @@
-tabs: ["src/App.jsx", "src/main.jsx"]
+tabs: ["src/App.jsx", "src/main.jsx", "src/components/About/About.jsx"]
 terminals: ["npm install && npm run dev"]
 run-button: npm run dev
